--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
             </td>
             <td>
-                <img src="../img/home.png" alt="Image description" height="40px" width="45px">
+                <img src="/../img/home.png" alt="Image description" height="40px" width="45px">
             </td>
         </tr>
     </tbody>
