--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                 </div>
             </td>
             <td>
+                <a href="https://svpp-results-2023.github.io/III-SEM-B.TECH.github.io/">
                 <img src="./img/home.png" alt="Image description" height="40px" width="45px">
+                </a>
             </td>
         </tr>
     </tbody>
