--- a/index.html
+++ b/index.html
@@ -51,5 +51,13 @@ function inputLength(input) {
     return true;
   }
 }
+
+var input = document.getElementById("value");
+
+    input.addEventListener("input", function(event) {
+
+      input.value = input.value.toUpperCase();
+
+    });
 </script>
 </html>
