--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <html>
+<html>
 <head>
     <title> SVPCET RESULTS </title>
     <link rel="stylesheet" href="style.css">
@@ -62,4 +62,3 @@ var input = document.getElementById("value");
     });
 </script>
 </html>
--->
